@ALTERNATE_DOCDIR_TRUE@realdocdir = $(prefix)/share/doc/vice
@ALTERNATE_DOCDIR_FALSE@realdocdir = $(VICEDIR)/doc

docdir = $(realdocdir)

BUILDING_DOX = \
	Android-Howto.txt \
	SDL-Howto.txt \
	Windows-MinGW-GTK3-Howto.txt \
	FreeBSD-GTK3-Howto.txt \
	macOS-Distribution-Howto.txt \
	macOS-GTK3-Howto.txt \
	macOS-SDL2-Howto.txt \
	macOS-Xcode-Howto.txt \
	Linux-GTK3-Howto.txt \
	NetBSD-howto.txt

dist_doc_DATA = $(BUILDING_DOX)
