BUILDING_DOX = \
	Android-Howto.txt \
	SDL-Howto.txt \
	Windows-MinGW-GTK3-Howto.txt \
	FreeBSD-GTK3-Howto.txt \
	macOS-Distribution-Howto.txt \
	macOS-Howto.txt \
	macOS-Xcode-Howto.txt \
	Linux-GTK3-Howto.txt \
	GTK3-cross-build-setup.md \
	GTK3-debian-frankenvice.md \
	GTK3-Fedora-cross-build-setup.md \
	NetBSD-howto.txt

dist_doc_DATA = $(BUILDING_DOX)

