@ALTERNATE_DOCDIR_TRUE@realdocdir = $(prefix)/share/doc/vice
@ALTERNATE_DOCDIR_FALSE@realdocdir = $(VICEDIR)/doc

docdir = $(realdocdir)

READMES = \
	Readme-Amiga.txt \
	Readme-BeOS.txt \
	Readme-DOS.txt \
	Readme-MacOSX.txt \
	Readme-OS2.txt \
	Readme-SDL.txt \
	Readme-Unix.txt

dist_doc_DATA = $(READMES)
