INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/sid \
	-I$(top_srcdir)/src/crtc \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/drive

noinst_LIBRARIES = libcbm2.a

libcbm2_a_SOURCES = \
	crtc.c \
	c610.c \
	c610.h \
	c610acia.h \
	c610acia1.c \
	c610cia.h \
	c610cia1.c \
	c610cpu.c \
	c610datasette.c \
	c610iec.c \
	c610mem.c \
	c610mem.h \
	c610tpi.h \
	c610tpi1.c \
	c610tpi2.c

