INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/sid \
	-I$(top_srcdir)/src/crtc \
	-I$(top_srcdir)/src/vicii \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/monitor

noinst_LIBRARIES = libcbm2.a

libcbm2_a_SOURCES = \
	c610-cmdline-options.c \
	c610-cmdline-options.h \
	c610-resources.c \
	c610-resources.h \
	c610-snapshot.c \
	c610-snapshot.h \
	c610.c \
	c610.h \
	c610acia.h \
	c610acia1.c \
	c610cia.h \
	c610cia1.c \
	c610cpu.c \
	c610datasette.c \
	c610iec.c \
	c610mem.c \
	c610mem.h \
	c610rom.c \
	c610rom.h \
	c610tpi.h \
	c610tpi1.c \
	c610tpi2.c
