INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/sid \
	-I$(top_srcdir)/src/crtc \
	-I$(top_srcdir)/src/vicii \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/tape

noinst_LIBRARIES = libcbm2.a

libcbm2_a_SOURCES = \
	cbm2-cmdline-options.c \
	cbm2-cmdline-options.h \
	cbm2-resources.c \
	cbm2-resources.h \
	cbm2-snapshot.c \
	cbm2-snapshot.h \
	cbm2.c \
	cbm2.h \
	cbm2acia.h \
	cbm2acia1.c \
	cbm2bus.c \
	cbm2cia.h \
	cbm2cia1.c \
	cbm2cpu.c \
	cbm2datasette.c \
	cbm2drive.c \
	cbm2iec.c \
	cbm2iec.h \
	cbm2mem.c \
	cbm2mem.h \
	cbm2memsnapshot.c \
	cbm2memsnapshot.h \
	cbm2printer.c \
	cbm2rom.c \
	cbm2rom.h \
	cbm2tpi.h \
	cbm2tpi1.c \
	cbm2tpi2.c

