INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/raster

noinst_LIBRARIES = libcrtc.a

libcrtc_a_SOURCES = \
	crtc.c \
	crtc.h \
	crtc-cmdline-options.c \
	crtc-cmdline-options.h \
	crtc-draw.c \
	crtc-draw.h \
	crtc-mem.c \
	crtc-mem.h \
	crtc-resources.c \
	crtc-resources.h \
	crtc-snapshot.c \
	crtc-snapshot.h 

EXTRA_DIST =

